--- a/src/main/resources/fxml/TeamsTableTab/TeamsTableTab.fxml
+++ b/src/main/resources/fxml/TeamsTableTab/TeamsTableTab.fxml
@@ -17,11 +17,11 @@
         </HBox>
         <TableView fx:id="personTable" prefHeight="-1.0" prefWidth="-1.0" tableMenuButtonVisible="false" AnchorPane.bottomAnchor="10.0" AnchorPane.leftAnchor="10.0" AnchorPane.rightAnchor="10.0" AnchorPane.topAnchor="40.0">
             <columns>
-                <TableColumn fx:id="teamNameColumn" maxWidth="5000.0" minWidth="10.0" prefWidth="120.0" text="Team Name" />
-                <TableColumn fx:id="firstNameColumn" maxWidth="5000.0" minWidth="10.0" prefWidth="120.0" text="First Name" />
-                <TableColumn fx:id="lastNameColumn" maxWidth="5000.0" minWidth="10.0" prefWidth="120.0" text="Last Name" />
-                <TableColumn fx:id="disqualifiedColumn" maxWidth="5000.0" minWidth="5.0" prefWidth="60.0" text="Disqualified" />
-                <TableColumn fx:id="paidColumn" maxWidth="5000.0" minWidth="5.0" prefWidth="60.0" text="Paid" />
+                <TableColumn fx:id="teamNameColumn" maxWidth="5000.0" minWidth="10.0" prefWidth="120.0" text="Team Name" sortable="true"/>
+                <TableColumn fx:id="firstNameColumn" maxWidth="5000.0" minWidth="10.0" prefWidth="120.0" text="First Name" sortable="true"/>
+                <TableColumn fx:id="lastNameColumn" maxWidth="5000.0" minWidth="10.0" prefWidth="120.0" text="Last Name" sortable="true"/>
+                <TableColumn fx:id="disqualifiedColumn" maxWidth="5000.0" minWidth="5.0" prefWidth="60.0" text="Disqualified" sortable="true"/>
+                <TableColumn fx:id="paidColumn" maxWidth="5000.0" minWidth="5.0" prefWidth="60.0" text="Paid" sortable="true"/>
             </columns>
             <columnResizePolicy>
                 <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
