--- a/src/main/resources/fxml/Main.fxml
+++ b/src/main/resources/fxml/Main.fxml
@@ -26,7 +26,7 @@
                   <SeparatorMenuItem mnemonicParsing="false" />
                   <Menu mnemonicParsing="false" text="Import...">
                      <items>
-                        <MenuItem mnemonicParsing="false" text="Anmledungen" />
+                        <MenuItem fx:id="importRegistrations" mnemonicParsing="false" text="Anmledungen" />
                      </items>
                   </Menu>
                   <Menu mnemonicParsing="false" text="Export...">
